[package]
name = "cybersec_ai_agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.9"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-cdk-timers = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[test]]
name = "log_analysis"
path = "tests/log_analysis.rs"