[package]
name = "cybersec_ai_agent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Internet Computer dependencies
ic-cdk = "0.12"
ic-cdk-macros = "0.6"
candid = "0.10.13"
serde_bytes = "0.11"

# Keep serialization dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Replace tokio with limited features
tokio = { version = "1.35.1", features = ["sync", "macros", "io-util", "rt", "time"] }

# Remove incompatible dependencies
# warp = "0.3"  # Not compatible with WASM
# reqwest = { version = "0.11", features = ["json"] }  # Not compatible with WASM

# For HTTP requests, use ic-cdk's http_request functionality instead
async-trait = "0.1"
log = "0.4"
# env_logger = "0.10"  # Not needed in canister environment

# Link to backend module
cybersec_ai_agent_backend = { path = "../cybersec_ai_agent_backend" }