[package]
name = "cybersec_ai_agent_backend"  
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.12"
ic-cdk-macros = "0.6"
candid = "0.10.13"  # Update to match the version used by ic-cdk
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["sync", "macros", "io-util", "rt", "time"] }
ic-cdk-timers = "0.6"  # As we discussed in the previous conversation
serde_bytes = "0.11"
num-traits = "0.2"